# Iver

./: CMakeLists.txt  interpreter.cpp
src/: interpreter.cpp
src/Enums/: TokenType.cpp  ValueType.cpp
src/IO/: FileHandler.cpp
src/Lexer/: Lexer.cpp  Lexer.hpp  lexel.cpp
src/Models/: Lexeme.cpp  Lexeme.hpp
